show messages on record save

--- a/templates/customers/index.html
+++ b/templates/customers/index.html
@@ -32,6 +32,7 @@
           <td>{{ customer.email }}</td>
           <td>{{ customer.contact }}</td>
           <td>{{ customer.desc }}</td>
+          <td><a href="show/{{customer.id}}" id = '{{customer.id}}'>Show</a></td>
           <td><a href="edit/{{customer.id}}" id = '{{customer.id}}'>Edit</a></td>
           <td><a href="delete/{{customer.id}}" id = '{{customer.id}}'>Delete</a></td>
         </tr>
