--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -20,10 +20,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/form">Customers</a>
+            <a class="nav-link" href="/index">Customers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/index">Customers List</a>
+            <a class="nav-link" href="products/index">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
